--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.9.1",
     "express": "^4.13.4",
+    "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
