--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.9.1",
+    "deep-freeze-strict": "^1.1.1",
     "express": "^4.13.4",
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
-    "react-sound": "^0.6.1"
+    "react-sound": "^0.6.1",
+    "yarn-install": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -41,6 +43,8 @@
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.13"
-  }
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^2.5.1"
+  },
+  "repository": "git@github.com:shansen5/ReactTodo.git"
 }
