Add Redux store

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "react-sound": "^0.6.1",
+    "redux": "^3.7.2",
     "yarn-install": "^0.3.0"
   },
   "devDependencies": {
