--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-uuid": "^1.4.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^5.0.5",
     "react-router": "^2.0.0",
     "react-sound": "^0.6.1",
     "redux": "^3.7.2",
