--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.9.1",
     "deep-freeze-strict": "^1.1.1",
     "express": "^4.13.4",
+    "firebase": "^4.1.3",
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
     "react": "^0.14.7",
@@ -21,6 +22,8 @@
     "react-router": "^2.0.0",
     "react-sound": "^0.6.1",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.2.3",
+    "redux-thunk": "^2.2.0",
     "yarn-install": "^0.3.0"
   },
   "devDependencies": {
@@ -30,7 +33,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "expect": "1.14.0",
+    "expect": "^1.20.2",
     "foundation-sites": "6.2.0",
     "jquery": "^2.2.1",
     "karma": "0.13.22",
