--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simple react web server.",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "karma start"
+    "start": "npm run build && node server.js",
+    "test": "NODE_ENV=test karma start",
+    "build": "webpack"
   },
   "author": "Steve Hansen",
   "license": "MIT",
@@ -17,6 +18,7 @@
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
     "react": "^0.14.7",
+    "react-addons-test-utils": "0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^5.0.5",
     "react-router": "^2.0.0",
@@ -24,9 +26,7 @@
     "redux": "^3.7.2",
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
-    "yarn-install": "^0.3.0"
-  },
-  "devDependencies": {
+    "yarn-install": "^0.3.0",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
@@ -36,20 +36,21 @@
     "expect": "^1.20.2",
     "foundation-sites": "6.2.0",
     "jquery": "^2.2.1",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.2",
-    "karma-mocha": "0.2.2",
-    "karma-mocha-reporter": "2.0.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.7.0",
-    "mocha": "2.4.5",
     "node-sass": "^3.4.2",
-    "react-addons-test-utils": "0.14.7",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^2.5.1"
+  },
+  "devDependencies": {
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-mocha": "0.2.2",
+    "karma-mocha-reporter": "2.0.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.7.0",
+    "mocha": "2.4.5"
   },
   "repository": "git@github.com:shansen5/ReactTodo.git"
 }
