--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
   "scripts": {
     "start": "yarn run build && node server.js",
     "test": "NODE_ENV=test karma start",
-    "build": "webpack"
+    "build": "webpack -p"
   },
   "author": "Steve Hansen",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.9.1",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
     "deep-freeze-strict": "^1.1.1",
+    "expect": "^1.20.2",
     "express": "^4.13.4",
     "firebase": "^4.1.3",
+    "foundation-sites": "6.2.0",
+    "jquery": "^2.2.1",
     "moment": "^2.18.1",
+    "node-env-file": "^0.1.8",
+    "node-sass": "^3.4.2",
     "node-uuid": "^1.4.8",
     "react": "^0.14.7",
     "react-addons-test-utils": "0.14.7",
@@ -26,22 +37,12 @@
     "redux": "^3.7.2",
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
-    "yarn-install": "^0.3.0",
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "expect": "^1.20.2",
-    "foundation-sites": "6.2.0",
-    "jquery": "^2.2.1",
-    "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.5.1",
+    "yarn-install": "^0.3.0"
   },
   "devDependencies": {
     "karma": "^1.7.0",
